Kelsey Development Sandbox/src/objects/Center__c.object
<CustomObject>
    <fields>
        <fullName>Input_ID__c</fullName>
        <label>Input ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Center__c.Type__c</field>
                <operation>equals</operation>
                <value>Main</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Sub-Centers</relationshipLabel>
        <relationshipName>Subcenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Schedule__c</fullName>
        <label>Reminder Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3-Month</fullName>
                </value>
                <value>
                    <fullName>6-Month</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No Reminders</fullName>
                </value>
                <value>
                    <fullName>--Testing--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Sub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Center</label>
    <listViews>
        <fullName>My_Centers</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Input_ID__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <columns>Main_center__c</columns>
        <columns>Reminder_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Centers</label>
    </listViews>
    <nameField>
        <label>Center ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>